<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.login.LoginActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout_email"
        app:layout_constraintVertical_bias=".3"
        android:layout_margin="8dp"
        app:boxBackgroundMode="outline"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:backgroundTint="@color/white"
            android:imeOptions="actionNext"
            android:id="@+id/edit_text_email"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:id="@+id/input_layout_password"
        android:layout_margin="8dp"
        app:boxBackgroundMode="outline"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:passwordToggleEnabled="true"
        app:boxCornerRadiusBottomEnd="5dp"
        app:boxCornerRadiusBottomStart="5dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/input_layout_email"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            android:backgroundTint="@color/white"
            android:imeOptions="actionGo"
            android:id="@+id/edit_text_password"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        app:cornerRadius="20dp"
        android:id="@+id/login_button"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/input_layout_password"/>



    <FrameLayout
        android:layout_width="match_parent"
        android:clickable="true"
        android:elevation="6dp"
        android:focusable="true"
        android:visibility="gone"
        android:id="@+id/loadingFrame"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>