<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.products.ProductsFragment">


    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="4dp"
        android:elevation="4dp"
        android:nestedScrollingEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:queryHint="@string/search" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/searchView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/product_image"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@color/shimmer_placeholder"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/circleImage" />

                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="17sp"
                    android:background="@color/shimmer_placeholder"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/delete"
                    app:layout_constraintStart_toEndOf="@id/product_image"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/product_price"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:background="@color/shimmer_placeholder"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/delete"
                    app:layout_constraintStart_toEndOf="@id/product_image"
                    app:layout_constraintTop_toBottomOf="@id/product_title" />


                <ImageView
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/product_image1"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:layout_margin="8dp"
                    app:srcCompat="@color/shimmer_placeholder"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearance="@style/circleImage" />

                <TextView
                    android:id="@+id/product_title1"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textSize="17sp"
                    android:background="@color/shimmer_placeholder"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/delete1"
                    app:layout_constraintStart_toEndOf="@id/product_image1"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/product_price1"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:background="@color/shimmer_placeholder"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toStartOf="@+id/delete1"
                    app:layout_constraintStart_toEndOf="@id/product_image1"
                    app:layout_constraintTop_toBottomOf="@id/product_title1" />


                <ImageView
                    android:id="@+id/delete1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="12dp"
                    android:padding="6dp"
                    android:src="@drawable/ic_baseline_delete_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_products"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/btn_add"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        tools:listitem="@layout/item_product" />

    <TextView
        android:id="@+id/empty_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:ems="12"
        android:text="@string/add_product"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
